RESOLVED FIXED229660
SubmitEvent.submitter property isn't set for <button type="submit">
https://bugs.webkit.org/show_bug.cgi?id=229660
Summary SubmitEvent.submitter property isn't set for <button type="submit">
Gilmore Davidson
Reported 2021-08-29 17:38:02 PDT
Created attachment 436753 [details] Reduced test case I was testing out the new `SubmitEvent` interface implemented in Bug 202978, using Tech Preview 130. It appears to only be filling in the `submitter` property when a form is submitted with `<input type="submit">` but not `<button type="submit">`. I've attached a simple HTML page that shows the problem. All the test cases work correctly in Chrome and Firefox, but the `<button type="submit">` case fails in Safari Tech Preview 130. I tried to test the latest raw WebKit build but couldn't run it due to Bug 228060.
Attachments
Reduced test case (1.54 KB, text/html)
2021-08-29 17:38 PDT, Gilmore Davidson
no flags
Patch (4.15 KB, patch)
2021-08-30 08:24 PDT, Chris Dumez
no flags
Chris Dumez
Comment 1 2021-08-30 08:11:18 PDT
Thanks for the bug report and the test case. I'll fix.
Chris Dumez
Comment 2 2021-08-30 08:24:14 PDT
EWS
Comment 3 2021-08-30 11:30:30 PDT
Committed r281770 (241107@main): <https://commits.webkit.org/241107@main> All reviewed patches have been landed. Closing bug and clearing flags on attachment 436775 [details].
Radar WebKit Bug Importer
Comment 4 2021-08-30 11:31:19 PDT
Note You need to log in before you can comment on or make changes to this bug.