SubmitEvent.submitter property isn't set for <button type="submit"> https://bugs.webkit.org/show_bug.cgi?id=229660

Reviewed by Ryosuke Niwa.

Source/WebCore:

Make sure HTMLButtonElement::defaultEventHandler() properly passes |this| as submitter
when calling HTMLFormElement::submitIfPossible(). This was causing the SubmitEvent.submitter
property to not be set when submitting a form by clicking a `<button type="submit">`.

Test: fast/forms/submit-button-submit-event.html

* html/HTMLButtonElement.cpp:
(WebCore::HTMLButtonElement::defaultEventHandler):

LayoutTests:

Add layout test coverage.

* fast/forms/submit-button-submit-event-expected.txt: Added.
* fast/forms/submit-button-submit-event.html: Added.


Canonical link: https://commits.webkit.org/241107@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@281770 268f45cc-cd09-0410-ab3c-d52691b4dbfc